[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/Effects/EffectBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/Effects/Burnin.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Components/UI/Instructions/MashDirectionsInstruction.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Components/Characters/DamageData.tscn" type="PackedScene" id=4]

[node name="Burnin" instance=ExtResource( 1 )]
script = ExtResource( 2 )
init_duration = 1
decrement_type = 1
icon_name = "Burnin_icon"

[node name="DamageData" parent="." index="0" instance=ExtResource( 4 )]
value = 1
ignore_invul = true
dmg_type = 5
atk_type = 2

[node name="ToDamage" type="Timer" parent="." index="1"]
wait_time = 0.8
autostart = true

[node name="MashDirectionsInstruction" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( -130, 46 )

[connection signal="timeout" from="ToDamage" to="." method="_on_ToDamage_timeout"]
